--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="app_name">Carethy</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="display_button">Display</string>
+    <string-array name="tracked_item_array">
+        <item>Weight</item>
+        <item>Calories</item>
+        <item>Bloody Pressure</item>
+        <item>Activity</item>
+    </string-array>
 </resources>
