--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">Carethy</string>
-    <string name="action_settings">Settings</string>
     <string name="display_button">Display</string>
+    <string name="action_refresh">Refresh</string>
     <string-array name="tracked_item_array">
         <item>Weight</item>
         <item>Calories</item>
