--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -4,10 +4,16 @@
     <string name="app_name">Carethy</string>
     <string name="display_button">Display</string>
     <string name="action_refresh">Refresh</string>
+
     <string-array name="tracked_item_array">
         <item>Weight</item>
         <item>Calories</item>
         <item>Bloody Pressure</item>
         <item>Activity</item>
     </string-array>
+
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
