--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="title_activity_register">Register</string>
     <string name="title_activity_terms">Terms and Conditions</string>
+    <string name="title_activity_password_recovery">Password Recovery</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
