--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">Carethy</string>
     <string name="display_button">Display</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_add">Add</string>
+    
 
     <string-array name="tracked_item_array">
         <item>Activity</item>
@@ -15,6 +17,7 @@
     <string name="title_activity_register">Register</string>
     <string name="title_activity_terms">Terms and Conditions</string>
     <string name="title_activity_password_recovery">Password Recovery</string>
+    <string name="title_activity_create_medication">Create Medication</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
