--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="display_button">Display</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_add">Add</string>
+    <string name="action_share">Share</string>
+    
     
 
     <string-array name="tracked_item_array">
