--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_add">Add</string>
     <string name="action_share">Share</string>
-    
+    <string name="display_settings">Display Settings</string>
+    <string name="notification_settings">Notification Settings</string>
     
 
     <string-array name="tracked_item_array">
