fix share image by setting white background, fix singleline for nav drawer textview and refactor some file name

--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -12,10 +12,10 @@
     <string name="settings_logout">Logout</string>
 
     <string-array name="tracked_item_array">
-        <item>Activity</item>
+        <item>Activities</item>
         <item>Sleep</item>
-        <item>Heart Rate</item>
-        <item>Bloody Pressure</item>
+        <item>Heart Beats</item>
+        <item>Bloody Pressures</item>
     </string-array>
 
     <string name="title_activity_register">Register</string>
@@ -27,10 +27,10 @@
 
     <string-array name="drawer_menu_item_titles">
         <item>Home</item>
-        <item>Activity</item>
+        <item>Activities</item>
         <item>Sleep</item>
-        <item>Heart Rate</item>
-        <item>Blood Pressure</item>
+        <item>Heart Beats</item>
+        <item>Blood Pressures</item>
         <item>Recommendations</item>
         <item>Medication</item>
         <item>Settings</item>
@@ -47,12 +47,7 @@
         <item>2</item>
         <item>3</item>
     </string-array>
-    <string-array name="recommendation_category">
-        <item>Activity</item>
-        <item>Sleep</item>
-        <item>Heart Rate</item>
-        <item>Bloody Pressure</item>
-    </string-array>
+
     <string-array name="recommendation_category_value">
         <item>0</item>
         <item>1</item>
