add profile UI to settings, modify login logic in mainActivity, delete unused files

--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -7,21 +7,26 @@
     <string name="action_add">Add</string>
     <string name="action_share">Share</string>
     <string name="settings_notifications">Notifications</string>
+    <string name="settings_profile">Profile</string>
+    <string name="settings_weight">Weight</string>
+    <string name="settings_height">Height</string>
+    <string name="settings_age">Age</string>
+    <string name="settings_sex">Sex</string>
+    <string name="settings_password">Change Password</string>
     <string name="settings_legal">Legal</string>
     <string name="settings_account">Account</string>
     <string name="settings_logout">Logout</string>
-
     <string name="details_alarm_name">Medication Name</string>
-	<string name="details_repeat_weekly">Repeat Weekly</string>
-	<string name="details_sunday">Sunday</string>
-	<string name="details_monday">Monday</string>
-	<string name="details_tuesday">Tuesday</string>
-	<string name="details_wednesday">Wednesday</string>
-	<string name="details_thursday">Thursday</string>
-	<string name="details_friday">Friday</string>
-	<string name="details_saturday">Saturday</string>
-	<string name="details_alarm_tone">Alarm Tone</string>
-	<string name="details_alarm_tone_default">Please Select an Alarm Ringtone</string>
+    <string name="details_repeat_weekly">Repeat Weekly</string>
+    <string name="details_sunday">Sunday</string>
+    <string name="details_monday">Monday</string>
+    <string name="details_tuesday">Tuesday</string>
+    <string name="details_wednesday">Wednesday</string>
+    <string name="details_thursday">Thursday</string>
+    <string name="details_friday">Friday</string>
+    <string name="details_saturday">Saturday</string>
+    <string name="details_alarm_tone">Alarm Tone</string>
+    <string name="details_alarm_tone_default">Please Select an Alarm Ringtone</string>
     <string name="save_icon">Save</string>
     <string name="discard_icon">Delete</string>
 
@@ -50,10 +55,10 @@
         <item>Settings</item>
     </string-array>
     <string-array name="notification_times">
-        <item>0 to 6</item>
-        <item>6 to 12</item>
-        <item>12 to 18</item>
-        <item>18 to 24</item>
+        <item>6AM</item>
+        <item>12PM</item>
+        <item>6PM</item>
+        <item>12AM</item>
     </string-array>
     <string-array name="notification_times_value">
         <item>0</item>
@@ -61,14 +66,20 @@
         <item>2</item>
         <item>3</item>
     </string-array>
-
     <string-array name="recommendation_category_value">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
     </string-array>
-
+    <string-array name="settings_sex">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+    <string-array name="settings_sex_value">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
     <!-- Nav Drawer List Item Icons -->
     <array name="nav_drawer_icons">
         <item>@drawable/ic_home</item>
