--- a/Carethy/res/values/strings.xml
+++ b/Carethy/res/values/strings.xml
@@ -88,10 +88,10 @@
     <!-- Nav Drawer List Item Icons -->
     <array name="nav_drawer_icons">
         <item>@drawable/ic_home</item>
-        <item>@drawable/ic_activity</item>
-        <item>@drawable/ic_sleep</item>
-        <item>@drawable/ic_heart_rate</item>
-        <item>@drawable/ic_blood_pressure</item>
+        <item>@drawable/ic_activity2</item>
+        <item>@drawable/ic_sleep2</item>
+        <item>@drawable/ic_heart_rate2</item>
+        <item>@drawable/ic_blood_pressure2</item>
         <item>@drawable/ic_recommendations</item>
         <item>@drawable/ic_medication</item>
         <item>@drawable/ic_settings</item>
